<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="add_product_button">Add Product</string>
    <string name="title_activity_detail_product">DetailProductActivity</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="add_product">Add Product</string>
    <string name="add_image">Add Image</string>
    <string name="please_click_add_product_button_to_add_products">Please click Add Product button
        to add products
    </string>
    <string name="add_product_exists">The product already exists</string>
    <string name="product_exists">The product exists</string>
    <string name="invalid_entry">Invalid entry entered</string>
    <string name="entry_created">Entry Created</string>
    <string name="make_sale">Make Sale</string>
    <string name="receive_item">Receive Item</string>
    <string name="delete_product">Delete Product</string>
    <string name="quantity">Quantity</string>
    <string name="sale">Sale</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="list_item_sale">Make Sale</string>
</resources>
