<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.AddProductActivityFragment"
    tools:showIn="@layout/activity_add_product">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_add_product"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_gravity="center_horizontal"
            tools:src="@mipmap/ic_launcher"/>

        <Button
            android:id="@+id/add_product_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/add_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_product_name"/>

        <EditText
            android:id="@+id/name_add_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/enter_product_price"/>

        <EditText
            android:id="@+id/price_add_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_price"
            android:inputType="numberDecimal"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/enter_product_quantity"/>

        <EditText
            android:id="@+id/quantity_add_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_quantity"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/enter_supplier_name"/>

        <EditText
            android:id="@+id/supplier_add_product_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_supplier_name"
            android:maxLines="1"/>

        <Button
            android:id="@+id/add_product_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_product"/>
    </LinearLayout>
</ScrollView>