<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sudhirkhanger.app.inventoryapp.ui.DetailProductActivityFragment"
        tools:showIn="@layout/activity_detail_product">

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            tools:text="Product"/>

        <ImageView
            android:id="@+id/imageview_detail"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/price_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="$5.99"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="7"/>

            <TextView
                android:id="@+id/sold_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="Quantity"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sale"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="Sale"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_detail_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_sale"/>

            <Button
                android:id="@+id/remove_detail_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receive_item"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/supplier_info"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="me@example.com"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageButton
                android:id="@+id/email_detail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_shopping_cart_black_48dp"/>

            <TextView
                android:id="@+id/supplier_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/email_detail"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceLarge"
                tools:text="me@example.com"/>
        </RelativeLayout>

        <Button
            android:id="@+id/delete_detail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_product"/>
    </LinearLayout>
</ScrollView>